# apps

./: .allow-ai-terms  .gitignore  .markdownlint.json  .markdownlintignore  CONTRIBUTING.md  CONTRIBUTORS.md  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  melos.yaml  pubspec.yaml  sprint_T_wiring_notes.md  sprint_Z_wiring_notes.md
daemon/: Cargo.toml  deny.toml  mutants.toml
daemon/benches/: daemon_bench.rs
daemon/scripts/: check-secret-logging.sh
daemon/src/: circuit_breaker.rs  claw_init.rs  context_manager.rs  doctor.rs  init_templates.rs  lib.rs  main.rs  mdns.rs  metrics.rs  process_pool.rs  resource_governor.rs  retry.rs  security.rs
daemon/src/account/: mod.rs
daemon/src/agents/: capabilities.rs  claude_config.rs  claude_mcp.rs  claude_sdk.rs  codex_appserver.rs  codex_mcp.rs  copilot.rs  health.rs  lifecycle.rs  mod.rs  orchestrator.rs  prompts.rs  provider_session.rs  roles.rs  router.rs  routing.rs
daemon/src/analysis/: semantic_delta.rs
daemon/src/analytics/: achievements.rs  handlers.rs  model.rs  storage.rs
daemon/src/arena/: handlers.rs  model.rs  storage.rs
daemon/src/automations/: builtins.rs  config.rs  engine.rs  mod.rs
daemon/src/autonomous/: confidence.rs  drift_enforcer.rs  handlers.rs  mod.rs  plan_generator.rs  qa_executor.rs  recipe.rs
daemon/src/autostart/: mod.rs
daemon/src/browser_tool/: handlers.rs  model.rs  runner.rs
daemon/src/builder/: handlers.rs  mod.rs  templates.rs
daemon/src/ci/: config.rs
daemon/src/cli/: bench.rs  (+18 more)
daemon/tests/: automation_test.rs  chat_cli_test.rs  ci_runner_test.rs  cli_account_integration.rs  completion_test.rs  direct_mode_test.rs  doctor_integration.rs  doctor_test.rs  evals_test.rs  ghost_diff_test.rs  health.rs  init_test.rs  integration_test.rs  intelligence_integration.rs  orchestration_test.rs  pack_install_test.rs  packs_test.rs  plugin_runtime_test.rs  policy_test.rs  providers_bb.rs  providers_zz.rs  recovery.rs  scheduler_test.rs  session_search_test.rs  task_confidence_test.rs  task_genealogy_test.rs  task_tests.rs  tse_test.rs  worktree_test.rs
(+940 files in other folders)
